added security route for /accounts
