# api/cmd/main.go
@@ -22,8 +22,13 @@ import (
 //	@contact.email	evans.dev99@gmail.com
 //	@contact.name	Evans Owamoyo
 
-//	@host		localhost:8000
-//	@BasePath	/api
+//	@host						localhost:8000
+//	@BasePath					/api
+//
+//	@securityDefinitions.apikey	bearerAuth
+//	@in							header
+//	@name						Authorization
+//	@description				Bearer <token>
 func main() {
 	// read configs
 	c := config.New()
